# Inferno-OS_Android-Clutter3d

./: .gitignore  Makefile  README.md  bld.sh  build-clutter-android.sh
app/: AndroidManifest.xml  local.properties
app/jni/: Android.mk  Application.mk  CMakeLists.txt  OpenSLWrap.cpp  OpenSLWrap.h  clutter-utils.c  clutter_main.c  utils.cpp  utils.h
app/res/values/: strings.xml
fake-android-application/: fake-android-application.c
jhbuild/jhbuild/modtypes/: __init__.py  __init__.py.rej
modulesets/: clutter-android.modules
sources/atk-2.5.4/: Makefile.in  aclocal.m4  atk.spec  config.h.win32  configure
sources/atk-2.5.4/atk/: Makefile.in  atk.rc
sources/atk-2.5.4/docs/: Makefile.in
sources/atk-2.5.4/docs/html/: index.html
sources/atk-2.5.4/po/: atk10.pot
sources/atk-2.5.4/tests/: Makefile.in
sources/cairo-1.12.2/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure
sources/cairo-1.12.2/autom4te.cache/: output.1  requests  traces.0  traces.1
sources/cairo-1.12.2/boilerplate/: Makefile.in
sources/cairo-1.12.2/doc/: Makefile.in
sources/cairo-1.12.2/doc/public/: Makefile.in
sources/cairo-1.12.2/perf/: Makefile.in
sources/cairo-1.12.2/perf/micro/: Makefile.in
sources/cairo-1.12.2/src/: Makefile.in  cairo-output-stream.c
sources/cairo-1.12.2/test/: Makefile.in
sources/cairo-1.12.2/test/pdiff/: Makefile.in
sources/cairo-1.12.2/util/: Makefile.in
sources/cairo-1.12.2/util/cairo-fdr/: Makefile.in
sources/cairo-1.12.2/util/cairo-gobject/: Makefile.in
sources/cairo-1.12.2/util/cairo-missing/: Makefile.in
sources/cairo-1.12.2/util/cairo-script/: Makefile.in
sources/cairo-1.12.2/util/cairo-sphinx/: Makefile.in
sources/cairo-1.12.2/util/cairo-trace/: Makefile.in  trace.c
sources/clutter-android/clutter/android/: clutter-android-application.c
sources/cogl-android/: Makefile.am  configure.ac
sources/cogl-android/cogl/: cogl-onscreen.h  cogl-x11-renderer-private.h
sources/cogl-android/cogl/winsys/: cogl-winsys-egl-android.c  cogl-winsys-egl-private.h  cogl-winsys-egl.c
sources/fontconfig-2.9.92/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  fontconfig.spec
sources/fontconfig-2.9.92/conf.d/: Makefile.in
sources/fontconfig-2.9.92/doc/: Makefile.in
sources/fontconfig-2.9.92/fc-cache/: Makefile.in
sources/fontconfig-2.9.92/fc-case/: Makefile.in
sources/fontconfig-2.9.92/fc-cat/: Makefile.in
sources/fontconfig-2.9.92/fc-glyphname/: Makefile.in
sources/fontconfig-2.9.92/fc-lang/: Makefile.in  fclang.h
sources/fontconfig-2.9.92/fc-list/: Makefile.in
sources/fontconfig-2.9.92/fc-match/: Makefile.in
sources/fontconfig-2.9.92/fc-pattern/: Makefile.in
sources/fontconfig-2.9.92/fc-query/: Makefile.in
sources/fontconfig-2.9.92/fc-scan/: Makefile.in
sources/fontconfig-2.9.92/fontconfig/: Makefile.in
sources/fontconfig-2.9.92/src/: Makefile.in  fcxml.c
sources/fontconfig-2.9.92/test/: Makefile.in
sources/gdk-pixbuf-2.26.3/: Makefile.in  aclocal.m4  config.h.in  config.h.win32  configure
sources/gdk-pixbuf-2.26.3/autom4te.cache/: output.1  requests  traces.0  traces.1
sources/gdk-pixbuf-2.26.3/contrib/: Makefile.in
sources/gdk-pixbuf-2.26.3/contrib/gdk-pixbuf-xlib/: Makefile.in
sources/gdk-pixbuf-2.26.3/docs/: Makefile.in
sources/gdk-pixbuf-2.26.3/docs/reference/: Makefile.in
sources/gdk-pixbuf-2.26.3/gdk-pixbuf/: Makefile.in  gdk_pixbuf.rc
sources/gdk-pixbuf-2.26.3/gdk-pixbuf/pixops/: Makefile.in
sources/gdk-pixbuf-2.26.3/po/: af.po  ang.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gdk-pixbuf.pot  gl.po  gu.po  he.po  hi.po  hr.po  (+64 more)
sources/gdk-pixbuf-2.26.3/tests/: Makefile.in
sources/gettext-0.18.2/gettext-runtime/intl/: Makefile.in
sources/gettext-0.18.2/gettext-tools/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure
sources/gettext-0.18.2/gettext-tools/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
sources/gettext-0.18.2/gettext-tools/doc/: Makefile.in
sources/gettext-0.18.2/gettext-tools/examples/: Makefile.in  aclocal.m4  configure
sources/gettext-0.18.2/gettext-tools/gnulib-lib/: Makefile.in
sources/gettext-0.18.2/gettext-tools/gnulib-tests/: Makefile.in
sources/gettext-0.18.2/gettext-tools/libgettextpo/: Makefile.in
sources/gettext-0.18.2/gettext-tools/libgrep/: Makefile.in
sources/gettext-0.18.2/gettext-tools/m4/: Makefile.in
sources/gettext-0.18.2/gettext-tools/man/: Makefile.in
sources/gettext-0.18.2/gettext-tools/misc/: Makefile.in
sources/gettext-0.18.2/gettext-tools/projects/: Makefile.in
sources/gettext-0.18.2/gettext-tools/src/: Makefile.in
sources/gettext-0.18.2/gettext-tools/styles/: Makefile.in
sources/gettext-0.18.2/gettext-tools/tests/: Makefile.in
sources/glib/: acinclude.m4
sources/glib/gio/: gdbusmessage.c
sources/glib/m4macros/: Makefile.am
sources/libsoup/: Makefile.am
sources/libxml2-2.9.0/: Makefile.am  Makefile.in  config.h.in  configure  configure.in
sources/libxml2-2.9.0/autom4te.cache/: output.0  requests  traces.0  traces.1
sources/libxml2-2.9.0/doc/: Makefile.in
sources/libxml2-2.9.0/example/: Makefile.in
sources/libxml2-2.9.0/include/: Makefile.in
sources/libxml2-2.9.0/python/: Makefile.in
sources/libxml2-2.9.0/xstc/: Makefile.in
sources/pango-1.30.0/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  config.h.win32  configure
sources/pango-1.30.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
sources/pango-1.30.0/docs/: Makefile.in
sources/pango-1.30.0/examples/: Makefile.in
sources/pango-1.30.0/modules/: Makefile.in
sources/pango-1.30.0/pango/: Makefile.in  pango.rc  pangocairo.rc  pangoft2.rc  pangowin32.rc  pangox.rc  pangoxft.rc
sources/pango-1.30.0/pango-view/: Makefile.in
sources/pango-1.30.0/tests/: Makefile.in
sources/pango-1.30.0/tools/: Makefile.in
(+29 files in other folders)
